# OpenGL

./: .gitignore  CMakeLists.txt  README.md  app_struct.cpp  glfw_app.cpp  glfw_app.h  glfw_window.cpp  glfw_window.h  shader_triangle.cpp  square.cpp  triangle.cpp  version.cpp
(0)print_version/: version.cpp
(1)draw_simple_triangle/: triangle.cpp
(10)triangle_shaders_collor_atributes/: shaders_triangle.cpp
(11)triangle_ShaderClass/: CMakeLists.txt  Shader.cpp  shader.vs  shaders_triangle.cpp
(12)Shaders_e1_Traingle_upsite_down/: Shader.cpp  shader.vs  shaders_triangle.cpp
(13)Shaders_e2_triangle_move/: shader.fs  shader.vs  shaders_triangle.cpp
(14)Textures/: CMakeLists.txt  textures.cpp
(2)draw_simple_square/: CMakeLists.txt  square.cpp
(20)square_rotate/: CMakeLists.txt  square_rotate.cpp
(21)rotate_triangle/: CMakeLists.txt  Shader.h  shader.fs  shader.vs  triangle_rotate.cpp
(22)Transformations_ex1/: square_rotate.cpp
(23)Transformations_ex2/: CMakeLists.txt  Shader.cpp  shader.fs  square_rotate.cpp
(24)first3D/: CMakeLists.txt  Cube.cpp
(25)ten_3D_Cubes/: Cube.cpp  shader.vs
(3)create_app_class/: App.cpp  App.h  CMakeLists.txt  Window.cpp  Window.h  app_struct.cpp  glfw_app.cpp  glfw_app.h  glfw_window.cpp  glfw_window.h  main.cpp
(4)triangle_using_shaders/: CMakeLists.txt  shaders_triangle.cpp
(5)two_triangles_using_shaders/: shaders_two_triangles.cpp
(6)two_triangles_using_shaders_v2/: CMakeLists.txt  shaders_two_triangles.cpp
(7)two_triangles_two_progShaders/: CMakeLists.txt  twoTriangle_twoShadersProg.cpp
(+3 files in other folders)
